<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:fillViewport="true"
    tools:context=".ui.activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        >
        <FrameLayout
            android:id="@+id/signUp_fl_imageLayout"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/signIn_iv_profileImage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:padding="@dimen/_4sdp"
                android:scaleType="centerCrop"
                android:src="@color/input_background"
                app:riv_corner_radius="@dimen/_400sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/signup_iv_selectImage"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24ssp"
                android:src="@drawable/ic_camera"
                android:layout_gravity="bottom"
                android:background="@drawable/icon_bg"
                android:padding="@dimen/_4sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signUp_tv_addImage"
                android:text="@string/add_image"
                android:layout_gravity="center"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/secondary_text"
                />
        </FrameLayout>

    <TextView
        android:id="@+id/signUp_tv_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_asterisk"
        android:drawablePadding="@dimen/_4sdp"
        android:text="@string/first_name"
        android:textColor="@color/gray"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_8sdp"
         />

    <EditText
        android:id="@+id/signUp_et_firstName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/first_name"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textColorHint="@color/hint_color"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:textSize="@dimen/_13ssp"
        android:background="@drawable/background_input"
        android:imeOptions="actionNext"
        />

    <TextView
        android:id="@+id/signUp_tv_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/gray"
        android:drawableEnd="@drawable/ic_asterisk"
        android:drawablePadding="@dimen/_4sdp"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_14ssp"
        />

    <EditText
        android:id="@+id/signUp_et_lastName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/last_name"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textSize="@dimen/_13ssp"
        android:textColorHint="@color/hint_color"
        android:background="@drawable/background_input"
        android:imeOptions="actionNext"
        />

    <TextView
        android:id="@+id/signUp_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/gray"
        android:drawableEnd="@drawable/ic_asterisk"
        android:drawablePadding="@dimen/_4sdp"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_14ssp"
        />

        <EditText
            android:id="@+id/signUp_et_email"
            android:layout_width="match_parent"
            android:height="@dimen/_40sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/_13ssp"
            android:background="@drawable/background_input"
            android:imeOptions="actionNext"
            />

    <TextView
        android:id="@+id/signUp_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:drawableEnd="@drawable/ic_asterisk"
        android:textColor="@color/gray"
        android:drawablePadding="@dimen/_4sdp"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_14ssp"
        />

    <EditText
        android:id="@+id/signUp_et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/password_hint"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_13ssp"
        android:background="@drawable/background_input"
        android:imeOptions="actionNext"
        />



    <TextView
        android:id="@+id/signUp_tv_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:text="@string/confirm_password"
        android:drawableEnd="@drawable/ic_asterisk"
        android:textColor="@color/gray"
        android:drawablePadding="@dimen/_4sdp"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_14ssp"
         />

    <EditText
        android:id="@+id/signUp_et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/background_input"
        android:hint="@string/password_hint"
        android:textColorHint="@color/hint_color"
        android:layout_marginTop="@dimen/_6sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:textSize="@dimen/_13ssp"
        android:imeOptions="actionNext"
        />

    <TextView
        android:id="@+id/signup_tv_lastText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_tip"
        android:textColor="@color/gray"
        android:gravity="center"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/signUp_btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@drawable/btn_bg"
                android:padding="@dimen/_4sdp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:imeOptions="actionDone"
                />
            <ProgressBar
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:id="@+id/signUp_progressBar"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/_4sdp"
                />
            <TextView
                android:id="@+id/signUp_tv_loginHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>