<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.ResetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/forgetPass_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="@dimen/_4sdp"
            android:id="@+id/resetPass_iv_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/primary"
            android:padding="@dimen/_4sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        >
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:drawableEnd="@drawable/ic_asterisk"
        android:textColor="@color/gray"
        android:drawablePadding="@dimen/_4sdp"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_14ssp"
        />

    <EditText
        android:id="@+id/resetPass_et_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:hint="@string/password_hint"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_13ssp"
        android:background="@drawable/background_input"

        />



    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:text="@string/repeat_password"
        android:drawableEnd="@drawable/ic_asterisk"
        android:textColor="@color/gray"
        android:drawablePadding="@dimen/_4sdp"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_14ssp"
        />

    <EditText
        android:id="@+id/resetPass_et_confirmPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/background_input"
        android:hint="@string/password_hint"
        android:textColorHint="@color/hint_color"
        android:layout_marginTop="@dimen/_6sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:textSize="@dimen/_13ssp"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_tip"
        android:textColor="@color/gray"
        android:gravity="center"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_16sdp"
        />
    <Button
        android:id="@+id/resetPass_btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:background="@drawable/btn_bg"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        />
</LinearLayout>
</LinearLayout>