<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.ForgetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/forgetPass_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="@dimen/_4sdp"
            android:id="@+id/forgetPass_iv_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/primary"
            android:padding="@dimen/_4sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        >

        <TextView
            android:id="@+id/forgetPass_tv_enterTheEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/enter_the_email_or_phone_number_associated_to_the_account"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14ssp"
            />

        <TextView
            android:id="@+id/forgetPass_tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_asterisk"
            android:drawablePadding="@dimen/_4sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/email"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14ssp"

            />


        <EditText
            android:id="@+id/forgetPass_et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:drawableEnd="@drawable/email_icon"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColorHint="@color/hint_color"
            android:layout_marginTop="@dimen/_6sdp"
            />


        <Button
            android:id="@+id/forgetPass_btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/send"
            android:layout_marginTop="@dimen/_24sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>