<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_20sdp"
    android:elevation="@dimen/_4sdp"
    android:id="@+id/savedResult_card"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
    <LinearLayout
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:orientation="vertical"
        >
        <TextView
            android:textColor="@color/primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:id="@+id/savedResult_userName"
            android:text="@string/user_name"
            android:padding="@dimen/_4sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:id="@+id/savedResult_userEmail"
            android:text="@string/user_email"
            android:padding="@dimen/_4sdp"
            />
    </LinearLayout>
    <TextView
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/savedResult_result"
        android:text="@string/result"
        android:padding="@dimen/_4sdp"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        />
    </LinearLayout>

</androidx.cardview.widget.CardView>